2.4.1
 - fix: strip white-space characters from line edits in the
   preferences to avoid line breaks introduced in the API key
   via copy-paste
2.4.0
 - feat: allow to set Young's modulus parameters for all
   open datasets via the "Bulk action" menu (#60)
 - fix: force temperature for Young's modulus computation
   to the value stored in the dataset for the "config"
   scenario
 - enh: update menu keybord shortcuts
2.3.0
 - enh: added preferences dialog
 - enh: improved user experience for searching DCOR data
 - ref: migrate settings to QSettings
 - setup: remove appdirs dependency, because we let QSettings
   determine where to store settings
2.2.6
 - fix: support user-defined media introduced in dclab 0.29.1 (#53)
 - fix: porosity box filter precision at lower limit (#58)
 - docs: update bibliography
 - bump dclab from 0.29.0 to 0.29.1
2.2.5
 - setup: correct installation directory on Windows
 - setup: bump dclab from 0.27.11 to 0.29.0
 - fix: main window not focused after startup (#52)
2.2.4
 - fix: UI slot issues (probably a racing condition) in the
   analysis view; editing the viscosity for "other" medium not
   possible on frozen Windows and macOS application (#49)
2.2.3
 - fix: update Quick View plot when values for the Young's modulus
   computation are changed (#44)
 - fix: use fixed point size in Block Matrix
 - enh: improve plot matrix column/row visualization and show flow
   rate (#45)
 - docs: update visualization of Young's modulus look-up tables
   using new figure script from dclab
 - build: bump Python to 3.8 for Windows builds
 - setup: bump dclab from 0.27.5 to 0.27.11 (improvement of hierarchy
   child handling)
2.2.2
 - fix: correct box filter ranges when feature contains inf values
 - enh: add pretty tool icons from KDE breeze theme
2.2.1
 - fix: zero-division error when setting "one plot per dataset"
   for an empty plot (#41)
 - build: pin PyQt5 to 5.14.2 on Linux/macOS
2.2.0