@@ -52,6 +52,28 @@ def test_empty_plot_with_one_plot_per_dataset_issue_41(qtbot):
     qtbot.mouseClick(pv.pushButton_apply, QtCore.Qt.LeftButton)
 
 
+def test_feature_bright_avg_not_present_issue_62(qtbot):
+    """Plot a dataset that does not contain the "bright_avg" feature
+
+    ...or any means of computing it (i.e. via "image")
+    """
+    # create fake dataset without bright_avg
+    tmp = tempfile.mktemp(".rtdc", prefix="example_hue_")
+    with dclab.new_dataset(datapath / "calibration_beads_47.rtdc") as ds:
+        ds.export.hdf5(tmp, features=["area_um", "pos_x", "pos_y", "deform"])
+
+    mw = ShapeOut2()
+    qtbot.addWidget(mw)
+    # add dataset
+    slot_id = mw.add_dataslot([tmp])[0]
+    # add plot
+    plot_id = mw.add_plot()
+    # and activate it
+    pw = mw.block_matrix.get_widget(filt_plot_id=plot_id, slot_id=slot_id)
+    # this raised "ValueError: 'bright_avg' is not in list" (issue #62)
+    qtbot.mouseClick(pw, QtCore.Qt.LeftButton)
+
+
 def test_handle_axis_selection_empty_plot(qtbot):
     """User did not add a dataset to a plot and starts changing plot params"""
     mw = ShapeOut2()
@@ -181,11 +203,6 @@ def test_hue_feature_not_computed_if_not_selected(qtbot):
     # now check whether "bright_avg" has been computed
     assert "bright_avg" in ds.features
     assert "bright_avg" not in ds.features_loaded
-
-    try:
-        pathlib.Path(tmp).unlink()
-    except OSError:
-        pass
 
 
 def test_plot_ml_score(qtbot):
