@@ -2,6 +2,9 @@
  - fix: strip white-space characters from line edits in the
    preferences to avoid line breaks introduced in the API key
    via copy-paste
+ - fix: not possible to create plots for datasets without the
+   bright_avg feature; added a check for feature availability
+   before updating the interface (#62)
 2.4.0
  - feat: allow to set Young's modulus parameters for all
    open datasets via the "Bulk action" menu (#60)
